--- a/src/style/index.less
+++ b/src/style/index.less
@@ -18,3 +18,21 @@ img.cover {
   background-position: center;
   background-size: cover;
 }
+.action-box {
+  span {
+    cursor: pointer;
+    margin-right: 5px;
+  }
+  .primary {
+    color: #1890ff;
+  }
+  .success {
+    color: #52c41a;
+  }
+  .error {
+    color: #f5222d;
+  }
+  .warn {
+    color: #faad14;
+  }
+}
